--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -465,6 +465,12 @@ b, strong {
   color: #ffc200;
 }
 
+
+.mine:hover{
+  cursor: pointer;
+}
+
+
 @media (min-width: 1270px) {
   .owl-theme .owl-dots {
     position: relative;
